# freeacs-ng

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  NEWS  README  configure.ac
backend/pika/: database_mongodb.py  example_1_provisioning_periodic_inform.py  example_2_add_object.py  example_3_handle_add_object_response.py  example_4_add_object_and_set_parameters.py  example_5_connection_request.py  provisioning.py
config/: freeacs-ng
config/tmp/: .gitignore
src/: amqp.c  amqp.h  config.c  config.h  freeacs-ng.c  freeacs-ng.h  http.c  http.h  xml.c  xml.h
